--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,11 +2,37 @@
    Media Queries - Angaben ohne Gewähr
    ========================================================================== */
 
+   
 /*** Normale PCs, Laptops etc. ***/
 @media only screen and (min-width: 950px) {
 	.wrapper {
 		min-width:900px;
 		width: 900px;
+	}
+	.content {
+		width: 65%;
+		margin-left: 2%;
+		float: left;
+		border-left: solid thin #555;
+		border-right: solid thin #555;
+		box-shadow: 0 0 5px #555;
+	}
+	.sidebar {
+		width: 27%;
+		float: right;
+		margin-right: 2%;
+	}
+	
+	/** To not show an element on a certain device/resolution **/
+	.no-mobile {
+		visibility:visible;
+	}
+	.no-tabletbook {
+		visibility:visible;
+	}
+	.no-pc {
+		visibility:hidden;
+		display: none;
 	}
 }
 
@@ -18,13 +44,67 @@
 		min-width: 75%;
 		width: 75%;
 	}
+	.content {
+		width: 95%;
+		margin-left:auto;
+		margin-right:auto;
+		float: none;
+		border-left: solid thin #555;
+		border-right: solid thin #555;
+		box-shadow: 0 0 5px #555;
+	}
+	.sidebar {
+		width: 96%;
+		float: none;
+		margin-left:auto;
+		margin-right:auto;
+	}
+	
+	/** To not show an element on a certain device/resolution **/
+	.no-mobile {
+		visibility:visible;
+	}
+	.no-tabletbook {
+		visibility:hidden;
+		display: none;
+	}
+	.no-pc {
+		visibility:visible;
+	}
 }
 
 /*** Smartphones ***/
 @media only screen and (max-width: 450px) {
 	.wrapper {
-		min-width: 100%;
-		width: 100%;
+		min-width: 98%;
+		width: 98%;
+	}
+	.content {
+		box-shadow: 0 0 0 #fff;
+		width: 95%;
+		margin-left:auto;
+		margin-right:auto;
+		float: none;
+		border-left: none;
+		border-right: none;
+	}
+	.sidebar {
+		width: 96%;
+		float: none;
+		margin-left:auto;
+		margin-right:auto;
+	}
+	
+	/** To not show an element on a certain device/resolution **/
+	.no-mobile {
+		visibility:hidden;
+		display: none;
+	}
+	.no-tabletbook {
+		visibility:visible;
+	}
+	.no-pc {
+		visibility:visible;
 	}
 }
 
