--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,6 +22,9 @@
 		float: right;
 		margin-right: 2%;
 	}
+	.nav-collapse ul {
+		padding:0;
+	}
 	
 	/** To not show an element on a certain device/resolution **/
 	.no-mobile {
@@ -59,6 +62,9 @@
 		margin-left:auto;
 		margin-right:auto;
 	}
+	.nav-collapse ul {
+		padding:5px 0;
+	}
 	
 	/** To not show an element on a certain device/resolution **/
 	.no-mobile {
@@ -93,6 +99,9 @@
 		float: none;
 		margin-left:auto;
 		margin-right:auto;
+	}
+	.nav-collapse ul {
+		padding:5px 0;
 	}
 	
 	/** To not show an element on a certain device/resolution **/
