--- a/css/cwclan.css
+++ b/css/cwclan.css
@@ -170,13 +170,16 @@ p {
 	border-right: solid thin #444;
 	border-top: solid thin #444;
 }
-.sidebar .box p {
+.sidebar .box p,.sidebar .box .sidebar_div {
 	background: url('../img/design/agsquare.png');	
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	padding: 5px 10px;
 	margin-top: 0;
 	text-align: justify;
+}
+.sidebar .box .sidebar_div {
+        margin-bottom: 16px;
 }
 .content {
 	background: url('../img/design/agsquare.png');	
