changed a few things

--- a/css/cwclan.css
+++ b/css/cwclan.css
@@ -61,6 +61,7 @@ p {
     color: #fbfbfb;
     border: solid thin rgba(255,175,75,1);
     border-radius: 3px;
+    background: rgba(255,175,75,1);
     background: linear-gradient(to bottom, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 15px;
