Added logged in state and userbox
to call logged in state type in: index.php?login_state

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2380,9 +2380,9 @@ table th[class*="span"],
 .icon-signal {
   background-position: -408px 0;
 }
-
+/*** disabled ***/
 .icon-cog {
-  background-position: -432px 0;
+  background-position: none;
 }
 
 .icon-trash {
